deposit: collapse panel header fix
* Adds missing CSS classes for arrow states.

* Wraps panel headers into h3 elements.

* FIX Fixes "both collapse arrows are shown" bug in deposit frontend.

--- a/invenio/modules/deposit/static/css/deposit/form.css
+++ b/invenio/modules/deposit/static/css/deposit/form.css
@@ -1,6 +1,6 @@
 /*
  * This file is part of Invenio.
- * Copyright (C) 2014 CERN.
+ * Copyright (C) 2014, 2015 CERN.
  *
  * Invenio is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -62,6 +62,18 @@ span.ui-icon.ui-icon-circle-triangle-e {
 }
 .upload-stop {
   display:none;
+}
+
+.hide-on-collapsed {
+  display: block;
+}
+
+.panel-toggle.collapsed .hide-on-collapsed, .show-on-collapsed {
+  display: none;
+}
+
+.panel-toggle.collapsed .show-on-collapsed {
+  display: block;
 }
 
 /*Uploader*/
